--- a/Dockerfile_midtier
+++ b/Dockerfile_midtier
@@ -1,22 +1,20 @@
-# ---- Build stage (JDK 21) ----
-FROM maven:3.9.6-eclipse-temurin-21 AS build
-WORKDIR /app
+# Step 1: Use the official Node.js image as the base image
+FROM node:18-alpine
 
-# Pre-fetch deps for better caching
-COPY pom.xml .
-RUN mvn -q -e -DskipTests dependency:go-offline
+# Step 2: Set the working directory inside the container
+WORKDIR /midtier-trade-marshals
 
-# Copy sources and build
-COPY src ./src
-RUN mvn clean package -DskipTests
+# Step 3: Copy package.json and package-lock.json (or yarn.lock) to the container
+COPY package*.json ./
 
-# ---- Runtime stage (JRE/JDK 21) ----
-FROM eclipse-temurin:21-jre
-# If you prefer Debian slim: FROM openjdk:21-jdk-slim
-WORKDIR /app
+# Step 4: Install dependencies inside the container
+RUN npm install
 
-# Adjust the JAR name if your build produces something else
-COPY --from=build /app/target/*.jar /app/app.jar
+# Step 5: Copy the rest of the application code into the container
+COPY . .
 
+# Step 6: Expose the port that the app will run on (usually 3000 for Node.js)
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "/app/app.jar"]
+
+# Step 7: Define the command to run your app (assuming the start script is defined in package.json)
+CMD ["npm", "run", "dev"]
