Modify SPRING_DATASOURCE_URL in docker-compose
Updated database connection URL for spring-app service.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,6 @@ services:
       - fmts-nodejs
       - spring-app
       - mid-nodejs
-    
-  # network_mode removed to use default bridge network
-    # environment:
-    #   API_BASE_URL: http://mid-nodejs:4000/
-
 
   fmts-nodejs:
     image: leapfse#.jfrog.io/fse#team#/a######-fmts:1.0
@@ -28,9 +23,6 @@ services:
     depends_on:
       - spring-app
       - fmts-nodejs
-  # network_mode removed to use default bridge network
-    # environment:
-    #   BACKEND_URL: http://spring-app:8080/
 
   spring-app:
     image: leapfse#.jfrog.io/fse#team#/a######-backend:1.0
@@ -39,8 +31,6 @@ services:
     depends_on:
       - fmts-nodejs
     environment:
-      SPRING_DATASOURCE_URL: jdbc:oracle:thin:@a900001-tradex-db.cj6ui28e0bu9.ap-south-1.rds.amazonaws.com:1521/ORCL
+      SPRING_DATASOURCE_URL: jdbc:oracle:thin:@a######-rds-endpoint.ap-south-1.rds.amazonaws.com:1521/ORCL
       SPRING_DATASOURCE_USERNAME: admin
       SPRING_DATASOURCE_PASSWORD: LA2025fmr
-      # FMTS_URL: http://fmts-nodejs:3000/fmts
-  # network_mode removed to use default bridge network
